# gc

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
headers/: Camera.h  Mesh.h  VBO.h
libraries/include/glad/include/glad/: glad.h
models/mapinguari/: mapinguariBrown.gltf
models/mapinguari_red/: mapinguari_red.gltf
models/mapinguari_red2/: mapinguari_red6.gltf
models/mapinguari_red4/: mapinguari_5.gltf
shaders/: default.frag
src/: Mesh.cpp  Model.cpp  glad.c  main.cpp
